# Slicer

./: .gitignore  CMakeLists.txt  cylinder.stl  improvements_summary.md  main.cpp  model_reader_test.cpp  vcpkg.json  vector_test.cpp
src/: gui_main.cpp  gui_main.h  mesh_processor.cpp  mesh_processor.h  model3d.cpp  model3d.h  model_io.cpp  model_io.h  model_loader.cpp  model_loader.h  model_reader.cpp  model_reader.h  model_viewer.cpp  model_viewer.h  surface_analyzer.cpp  surface_analyzer.h  surface_processor.h
test_models/: cube.stl
